add header that generates a random key

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<title>Piano Octave</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="font-[arial]">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
